[package]
name = "titanic"
version = "0.1.0"
edition = "2024"



[dependencies]
nalgebra = "0.32"
csv = "1.2"
plotters = "0.3"
text_io = "0.1.12"
rand = "0.8"
rand_distr = "0.4"
actix-web = { version = "4.3", features = ["macros"] }
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
env_logger = "0.10.0"

[[bin]]
name = "hw6"
path = "src/hw6.rs"

[[bin]]
name = "hw7"
path = "src/hw7.rs"